
- It is now possible to use a constant as the default value for a data
  member. For example:

  // Slice
  const int MIN = 1;

  struct Info
  {
      int size = MIN;
  };

  It is also possible for a constant to refer to another constant:

  // Slice
  const int MAXIMUM_SIZE = 100;
  const int DEFAULT_SIZE = MAXIMUM_SIZE;


C++ Changes
===========

- Fixed a memory leak in IceSSL on Windows.

- Fixed a bug in the generated code for a Slice structure containing
  at least one data member that declares a default value. The
  constructors were not being exported correctly in this case.

- Fixed a bug where the IceUtil::Timer thread could die in case very
  large delays were specified.

- Removed extra include/IceGrid/Perf.h file.


Java Changes
============

- Added support for Android.

- Added overloaded constructors for user and system exceptions that
  accept a Throwable argument.

- Added an ice_staticId method to generated PrxHelper classes.

- Fixed a bug in slice2java in which a floating point default value
  could cause a compile error.

- Fixed a bug where Ice.ServerIdleTime wouldn't consistently shutdown
  servers after the given period of inactivity.


C# Changes
==========

- Added support for the .NET Compact Framework.

- Added demo/Ice/compact, which is a simple graphical client that uses
  Ice for .NET Compact Framework.

- Fixed bugs in the generated code that caused naming conflicts when
  using a Slice module named 'System'.

- Added an ice_staticId method to generated PrxHelper classes.

- Fixed a bug in the generated code when a Slice class uses the
  property mapping and declares default values for its members.


Python Changes
==============

- Fixed bug where None was not recognized as a keyword.


Ruby Changes
============

- Fixed a bug in the Ice extension that would cause an ArgumentError
  to be raised when attempting to print a byte sequence whose value is
  a string that contains null bytes.


PHP Changes
===========
